--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Data Portal</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header class="header">
+  <h1>Secure Data Portal</h1>
+</header>
+
+<main class="container">
+  <div id="contentGrid" class="grid"></div>
+</main>
+
+<footer class="footer">© 2026 Data Portal</footer>
+
+<script src="js/firebase.js"></script>
+<script src="js/user.js"></script>
+</body>
+</html>
 
