--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Admin Panel</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header class="header">
+  <h1>Admin Panel</h1>
+</header>
+
+<main class="container">
+  <form id="contentForm" class="card">
+    <input type="text" id="title" placeholder="Title" required />
+    <textarea id="description" placeholder="Description"></textarea>
+    <input type="text" id="imageUrl" placeholder="Cloudinary Image URL" />
+    <input type="text" id="fileUrl" placeholder="Cloudinary File URL" />
+    <input type="number" id="order" placeholder="Order" />
+    <button type="submit">Save</button>
+  </form>
+
+  <div id="adminList" class="grid"></div>
+</main>
+
+<script src="js/firebase.js"></script>
+<script src="js/auth.js"></script>
+<script src="js/admin.js"></script>
+</body>
+</html>
 
