--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 </main>
 
 <footer class="footer">© 2026 Data Portal</footer>
-
-<script src="js/firebase.js"></script>
-<script src="js/user.js"></script>
+<script type="module" src="js/firebase.js"></script>
+<script type="module" src="js/user.js"></script>
 </body>
 </html>
 
