--- a/admin.html
+++ b/admin.html
@@ -23,10 +23,9 @@
 
   <div id="adminList" class="grid"></div>
 </main>
-
-<script src="js/firebase.js"></script>
-<script src="js/auth.js"></script>
-<script src="js/admin.js"></script>
+<script type="module" src="js/firebase.js"></script>
+<script type="module" src="js/auth.js"></script>
+<script type="module" src="js/admin.js"></script>
 </body>
 </html>
 
