--- a/admin.html
+++ b/admin.html
@@ -1,31 +1,135 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Admin Panel</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Admin Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, sans-serif;
+      background: #f1f5f9;
+    }
+    header {
+      background: #0f172a;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    .container {
+      max-width: 1100px;
+      margin: auto;
+      padding: 1rem;
+    }
+    .card {
+      background: white;
+      padding: 1.5rem;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.1);
+      margin-bottom: 1.5rem;
+    }
+    input, textarea, select {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    label {
+      margin-top: 12px;
+      display: block;
+      font-weight: 600;
+    }
+    .range {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    button {
+      margin-top: 16px;
+      padding: 12px;
+      width: 100%;
+      background: #2563eb;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
-<header class="header">
-  <h1>Admin Panel</h1>
+<header>
+  <h1>Admin Dashboard</h1>
 </header>
 
-<main class="container">
+<div class="container">
+
   <form id="contentForm" class="card">
-    <input type="text" id="title" placeholder="Title" required />
-    <textarea id="description" placeholder="Description"></textarea>
-    <input type="text" id="imageUrl" placeholder="Cloudinary Image URL" />
-    <input type="text" id="fileUrl" placeholder="Cloudinary File URL" />
-    <input type="number" id="order" placeholder="Order" />
-    <button type="submit">Save</button>
+    <h3>Add / Update Content</h3>
+
+    <label>Category</label>
+    <select id="category">
+      <option value="news">News</option>
+      <option value="instructions">Instructions</option>
+      <option value="syllabus">Syllabus</option>
+      <option value="notices">Notices</option>
+      <option value="images">Images</option>
+      <option value="videos">Videos</option>
+      <option value="documents">Documents</option>
+    </select>
+
+    <label>Title</label>
+    <input id="title" required />
+
+    <label>Description / Text</label>
+    <textarea id="description"></textarea>
+
+    <label>Image URLs (comma separated)</label>
+    <textarea id="imageUrl" placeholder="url1, url2, url3"></textarea>
+
+    <label>File / Video URL</label>
+    <input id="fileUrl" />
+
+    <label>Image Size</label>
+    <select id="imageSize">
+      <option value="small">Small</option>
+      <option value="medium">Medium</option>
+      <option value="large">Large</option>
+    </select>
+
+    <label>Image Position</label>
+    <select id="position">
+      <option value="center">Center</option>
+      <option value="left">Left</option>
+      <option value="right">Right</option>
+    </select>
+
+    <label>How many items should appear?</label>
+    <div class="range">
+      <input type="range" id="maxItems" min="1" max="10" value="5" />
+      <span id="rangeValue">5</span>
+    </div>
+
+    <label>Display Order</label>
+    <input type="number" id="order" />
+
+    <button type="submit">Save Content</button>
   </form>
 
-  <div id="adminList" class="grid"></div>
-</main>
+  <div id="adminList"></div>
+
+</div>
+
+<script>
+  const r = document.getElementById("maxItems");
+  const v = document.getElementById("rangeValue");
+  r.oninput = () => v.textContent = r.value;
+</script>
+
 <script type="module" src="js/firebase.js"></script>
 <script type="module" src="js/auth.js"></script>
 <script type="module" src="js/admin.js"></script>
+
 </body>
 </html>
-
