--- a/index.html
+++ b/index.html
@@ -1,58 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8">
   <title>User Portal</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
+    * {
+      box-sizing: border-box;
+      max-width: 100%;
+    }
+
     body {
       margin: 0;
       font-family: system-ui, sans-serif;
       background: #f8fafc;
+      overflow-x: hidden;
     }
+
     header {
+      width: 100%;
       background: #0f172a;
       color: white;
       padding: 1rem;
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      gap: 1rem;
     }
+
     .menu {
       font-size: 24px;
       cursor: pointer;
     }
+
+    h2 {
+      margin: 0;
+      font-size: 1.2rem;
+    }
+
+    /* OFF-CANVAS MENU */
     nav {
       position: fixed;
       top: 0;
-      left: -260px;
-      width: 250px;
+      left: 0;
       height: 100%;
+      width: 260px;
       background: #1e293b;
       padding: 1rem;
-      transition: .3s;
-      z-index: 100;
+      transform: translateX(-100%);
+      transition: transform .3s ease;
+      z-index: 1000;
     }
+
+    nav.open {
+      transform: translateX(0);
+    }
+
+    nav .close {
+      color: white;
+      font-size: 22px;
+      cursor: pointer;
+      text-align: right;
+    }
+
     nav a {
       display: block;
       color: white;
-      padding: 10px 0;
+      padding: 12px 0;
       text-decoration: none;
-    }
-    nav.open { left: 0; }
-
-    .close {
-      color: white;
-      font-size: 20px;
-      text-align: right;
-      cursor: pointer;
     }
 
     main {
+      max-width: 1200px;
+      margin: auto;
       padding: 1rem;
     }
 
-    /* 🔑 REQUIRED BY user.js */
     #contentGrid {
       display: grid;
       grid-template-columns: 1fr;
@@ -61,9 +84,16 @@
 
     .card {
       background: white;
-      border-radius: 14px;
+      border-radius: 12px;
       padding: 1rem;
       box-shadow: 0 8px 20px rgba(0,0,0,.08);
+    }
+
+    .card img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      display: block;
     }
 
     .empty {
@@ -82,12 +112,12 @@
 <body>
 
 <header>
-  <span class="menu" onclick="toggle()">☰</span>
+  <span class="menu" onclick="toggleMenu()">☰</span>
   <h2>Information Portal</h2>
 </header>
 
 <nav id="nav">
-  <div class="close" onclick="toggle()">✕</div>
+  <div class="close" onclick="toggleMenu()">✕</div>
   <a href="#" onclick="load('news')">News</a>
   <a href="#" onclick="load('instructions')">Instructions</a>
   <a href="#" onclick="load('syllabus')">Syllabus</a>
@@ -98,12 +128,11 @@
 </nav>
 
 <main>
-  <!-- 🔑 REQUIRED ID -->
   <div id="contentGrid"></div>
 </main>
 
 <script>
-  function toggle() {
+  function toggleMenu() {
     document.getElementById("nav").classList.toggle("open");
   }
 </script>
