--- a/admin.html
+++ b/admin.html
@@ -1,87 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Admin Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, sans-serif;
-      background: #f1f5f9;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    header {
-      background: #0f172a;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    .container {
-      max-width: 1100px;
-      margin: auto;
-      padding: 1rem;
-      flex: 1;
-    }
-    .card {
-      background: white;
-      padding: 1rem;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,.1);
-      margin-bottom: 1rem;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-    button {
-      margin-top: 12px;
-      padding: 10px;
-      width: 100%;
-      background: #2563eb;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    footer {
-      text-align: center;
-      padding: 0.8rem;
-      font-size: 0.85rem;
-      color: #64748b;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Welcome Admin</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+body{margin:0;font-family:system-ui;background:#f1f5f9;min-height:100vh;display:flex;flex-direction:column}
+header{background:#0f172a;color:#fff;padding:1rem;text-align:center}
+.container{max-width:1100px;margin:auto;padding:1rem;flex:1}
+.card{background:#fff;padding:1rem;border-radius:12px;box-shadow:0 8px 20px rgba(0,0,0,.1);margin-bottom:1rem}
+input,textarea,select{width:100%;padding:10px;margin-top:8px;border-radius:8px;border:1px solid #ccc}
+button{margin-top:12px;padding:10px;width:100%;border:none;border-radius:8px;background:#2563eb;color:#fff;cursor:pointer}
+footer{text-align:center;padding:.8rem;font-size:.85rem;color:#64748b}
+</style>
 </head>
-<body>
 
-<header>
-  <h1>Welcome Admin</h1>
-</header>
+<body>
+<header><h1>Welcome Admin</h1></header>
 
 <div class="container">
+<form id="contentForm" class="card">
+<h3>Add / Update Content</h3>
 
-  <form id="contentForm" class="card">
-    <h3>Add Content</h3>
-    <input id="title" placeholder="Title" required>
-    <textarea id="description" placeholder="Description"></textarea>
-    <textarea id="imageUrl" placeholder="Image URLs (comma separated)"></textarea>
-    <input id="fileUrl" placeholder="File / Video URL">
-    <input id="order" type="number" placeholder="Order">
-    <button type="submit">Save</button>
-  </form>
+<label>Category</label>
+<select id="category">
+  <option value="news">News</option>
+  <option value="instructions">Instructions</option>
+  <option value="syllabus">Syllabus</option>
+  <option value="notices">Notices</option>
+  <option value="images">Images</option>
+  <option value="videos">Videos</option>
+  <option value="documents">Documents</option>
+</select>
 
-  <div id="adminList"></div>
+<label>Content Type</label>
+<select id="type">
+  <option value="text">Text</option>
+  <option value="image">Image</option>
+  <option value="video">Video</option>
+  <option value="document">Document</option>
+</select>
 
+<input id="title" placeholder="Title" required>
+<textarea id="description" placeholder="Description (optional)"></textarea>
+
+<textarea id="mediaUrls" placeholder="Media URLs (comma separated)"></textarea>
+
+<input id="order" type="number" placeholder="Order">
+
+<button type="submit">Save Content</button>
+</form>
+
+<div id="adminList"></div>
 </div>
 
-<footer>
-  © 2026 Vipul Bishnoi. All rights reserved.
-</footer>
+<footer>© 2026 Vipul Bishnoi. All rights reserved.</footer>
 
 <script type="module" src="js/firebase.js"></script>
 <script type="module" src="js/auth.js"></script>
